tests/analyze/test-form-body-type-mismatch/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Type mismatch: expected `int`, but found `nothing`.
> 3 | 	x
       ^

